--- a/ansible/roles/template/tasks/installing-packages.yml
+++ b/ansible/roles/template/tasks/installing-packages.yml
@@ -10,8 +10,8 @@
     packages:
       - {name: "sudo"} # To enable elevated command.
       - {name: "openssh-server"} # To enable SSH.
-      - {name: "sshpass"}
+      - {name: "sshpass"} # noninteractive ssh password provider.
       - {name: "qemu-guest-agent"} # To enhance Proxmox integration with the VM.
       - {name: "python3-pip"}
       - {name: "python-is-python3"}
-      - {name: "pip"}
+      - {name: "pip"} # A tool for installing and managing Python packages.
