Added the package libsecret-tools in the server-raw.

--- a/ansible/roles/template/tasks/installing-packages.yml
+++ b/ansible/roles/template/tasks/installing-packages.yml
@@ -15,3 +15,4 @@
       - {name: "python3-pip"}
       - {name: "python-is-python3"}
       - {name: "pip"} # A tool for installing and managing Python packages.
+      - {name: "libsecret-tools"} # Store and retrieve passwords.
