Added the uuid (Universally Unique Identifier Command-Line Tool) application.

--- a/ansible/roles/template/tasks/installing-packages.yml
+++ b/ansible/roles/template/tasks/installing-packages.yml
@@ -16,3 +16,4 @@
       - {name: "python-is-python3"}
       - {name: "pip"} # A tool for installing and managing Python packages.
       - {name: "libsecret-tools"} # Store and retrieve passwords.
+      - {name: "uuid"} # Universally Unique Identifier Command-Line Tool.
