--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ansible/roles/common"]
 	path = ansible/roles/common
 	url = https://github.com/lsampaioweb/ansible-common-tasks.git
+[submodule "terraform"]
+	path = terraform
+	url = https://github.com/lsampaioweb/terraform-proxmox-ubuntu-22-04-module.git
