--- a/ansible/roles/provision/tasks/main.yml
+++ b/ansible/roles/provision/tasks/main.yml
@@ -1,3 +1,10 @@
 ---
-- name: "Change the hostname"
-  ansible.builtin.import_tasks: "hostname.yml"
+- name: "Changing the hostname"
+  delegate_to: "{{ host }}"
+  become: true
+  ansible.builtin.import_tasks: "roles/common/tasks/debian/os/hostname.yml"
+
+- name: "Installing required packages"
+  delegate_to: "{{ host }}"
+  become: true
+  ansible.builtin.import_tasks: "installing-packages.yml"
