--- a/ansible/test_provision.yml
+++ b/ansible/test_provision.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Preparing the virtual machine with some settings"
-  hosts: "localhost"
+  hosts: "JumpServer"
 
   roles:
     - "provision"
