Changed from fixed to dinamic root_password_id.

--- a/ansible/roles/provision/vars/main.yml
+++ b/ansible/roles/provision/vars/main.yml
@@ -3,7 +3,7 @@
 ansible_user: "usr_ansible"
 
 # The id of the password saved in the secret manager.
-root_password_id: "ubuntu-22-04-server-raw"
+root_password_id: "{{ password_id }}"
 
 # The password of the root user used in VM.
-ansible_password: "{{ lookup('pipe', 'secret-tool lookup password {{ root_password_id }}') }}"
+ansible_password: "{{ lookup('pipe', 'secret-tool lookup password ' + root_password_id) }}"
