--- a/ansible/kvm_node.yml
+++ b/ansible/kvm_node.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Setting some extra configurations directly on the Proxmox node"
-  hosts: "{{ node }}"
+  hosts: "{{ node | default('proxmox') }}"
 
   roles:
     - "kvm_node"
