Created a UFW task.

--- a/ansible/roles/template/tasks/main.yml
+++ b/ansible/roles/template/tasks/main.yml
@@ -17,6 +17,9 @@
 - name: "Removing unnecessary packages"
   ansible.builtin.import_tasks: "removing-packages.yml"
 
+- name: "Enabling and setting up UFW"
+  ansible.builtin.import_tasks: "ufw.yml"
+
 - name: "Recreating the machine-id file so the new VM can get a new IP"
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/machine-id.yml"
 
