Because this is just the template I changed the ufw rule to allow all SSH connections.

--- a/ansible/roles/template/tasks/ufw.yml
+++ b/ansible/roles/template/tasks/ufw.yml
@@ -3,8 +3,9 @@
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/ufw.yml"
   vars:
     rules:
-      - {rule: "allow", name: "OpenSSH", src: "192.168.0.100", comment: "MacBook Pro"}
-      - {rule: "allow", name: "OpenSSH", src: "192.168.0.201", comment: "JumpServer"}
+      - {rule: "allow", name: "OpenSSH", comment: "Allow OpenSSH for All"}
+      # - {rule: "allow", name: "OpenSSH", src: "192.168.0.100", comment: "Allow OpenSSH for All"}
+      # - {rule: "allow", name: "OpenSSH", src: "192.168.0.201", comment: "JumpServer"}
 
 - name: "Setting DENY as the default policy and enabling the UFW"
   community.general.ufw:
