--- a/ansible/roles/template/tasks/main.yml
+++ b/ansible/roles/template/tasks/main.yml
@@ -11,6 +11,11 @@
 - name: "Ensure the VM trusts the HomeLab's CA Certificate."
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/trust-ca-certificate.yml"
 
+- name: "Creating the OpenSSH keypair"
+  ansible.builtin.import_tasks: "roles/common/tasks/debian/os/openssh-keypair.yml"
+  vars:
+    host: "{{ groups['JumpServer'][0] }}"
+
 - name: "Installing required packages"
   ansible.builtin.import_tasks: "installing-packages.yml"
 
