--- a/ansible/roles/kvm_node/tasks/main.yml
+++ b/ansible/roles/kvm_node/tasks/main.yml
@@ -2,5 +2,8 @@
 - name: "Set SSD simulation, IO Threading and Discard"
   ansible.builtin.import_tasks: "disk-config.yml"
 
+- name: "Set CPU HotPlug"
+  ansible.builtin.import_tasks: "disk-config.yml"
+
 - name: "Remove the CDROM"
   ansible.builtin.import_tasks: "remove-cdrom.yml"
