Make SSH bind only on IPv4 address.

--- a/ansible/roles/template/files/ssh.conf
+++ b/ansible/roles/template/files/ssh.conf
@@ -22,3 +22,6 @@ AcceptEnv no
 
 # Print some information about the last login.
 PrintLastLog yes
+
+# Make SSH bind only on IPv4 address.
+AddressFamily inet
