Added full support for cloud-init in the Packer project.

--- a/ansible/roles/template/files/ssh.conf
+++ b/ansible/roles/template/files/ssh.conf
@@ -2,6 +2,8 @@
 Protocol 2
 
 # The path where the signed openssh keypair file should be read.
+HostCertificate /etc/ssh/ssh_host_rsa_key-cert.pub
+HostCertificate /etc/ssh/ssh_host_ecdsa_key-cert.pub
 HostCertificate /etc/ssh/ssh_host_ed25519_key-cert.pub
 
 # Disable logging in via SSH as the root user.
