--- a/ansible/roles/template/tasks/main.yml
+++ b/ansible/roles/template/tasks/main.yml
@@ -11,11 +11,17 @@
 - name: "Ensure the VM trusts the HomeLab's CA Certificate."
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/trust-ca-certificate.yml"
 
+- name: "Creating the Certificate Authority (CA) OpenSSH keypair"
+  ansible.builtin.import_tasks: "roles/common/tasks/debian/os/ca-openssh-keypair.yml"
+
 - name: "Creating the OpenSSH keypair"
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/openssh-keypair.yml"
 
 - name: "Installing required packages"
   ansible.builtin.import_tasks: "installing-packages.yml"
+
+- name: "Enabling Cloud-Init"
+  ansible.builtin.import_tasks: "enabling-cloud-init.yml"
 
 - name: "Removing unnecessary packages"
   ansible.builtin.import_tasks: "removing-packages.yml"
