--- a/ansible/roles/kvm_disk/tasks/disk-config.yml
+++ b/ansible/roles/kvm_disk/tasks/disk-config.yml
@@ -1,5 +1,5 @@
 ---
 - name: "Setting SSD simulation, IO Threading and Discard"
-  ansible.builtin.command: "qm set {{ vm_id }} --{{ disk_type }} file={{ file }},ssd=1,iothread=1,discard=on"
+  ansible.builtin.command: "qm set {{ vm_id }} --{{ disk_type }} file={{ file }},discard=on,iothread=1,ssd=1"
   register: "output_disk"
   changed_when: output_disk.rc == 0 and output_disk.stderr == ""
