--- a/ansible/roles/template/tasks/main.yml
+++ b/ansible/roles/template/tasks/main.yml
@@ -32,6 +32,9 @@
 - name: "Enabling hardware hotplug"
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/hardware-hotplug.yml"
 
+- name: "Creating the Ansible user account"
+  ansible.builtin.import_tasks: "users.yml"
+
 - name: "Recreating the machine-id file so the new VM can get a new IP"
   ansible.builtin.import_tasks: "roles/common/tasks/debian/os/machine-id.yml"
 
