--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "packer/iso"]
 	path = packer/iso
 	url = https://github.com/lsampaioweb/packer-proxmox-ubuntu-22-04-iso.git
+[submodule "ansible/roles/kvm_setup"]
+	path = ansible/roles/kvm_setup
+	url = https://github.com/lsampaioweb/ansible-kvm-cloud-init.git
