--- a/ansible/roles/template/vars/main.yml
+++ b/ansible/roles/template/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # The domain name of the HomeLab.
-domain: "homelab"
+domain: "lan.homelab"
 
 # All servers are located in Aracaju - Brazil. Maceio is the closest city.
 timezone: "America/Maceio"
