--- a/ansible/roles/template/vars/main.yml
+++ b/ansible/roles/template/vars/main.yml
@@ -11,8 +11,8 @@ ntp_servers:
   - "ntp-pool.lan.homelab"
 
 # Path of the SSL and SSH CA Certificate.
-certificate_authority_path: "/opt/certificates/certificate.authority"
-ssl_ca_certificate_path: "{{ certificate_authority_path }}/certificate.authority.crt"
+certificate_authority_path: "/opt/certificates/certificate-authority.{{ domain }}"
+ssl_ca_certificate_path: "{{ certificate_authority_path }}/certificate-authority.{{ domain }}.crt"
 ssh_ca_certificate_path: "{{ certificate_authority_path }}/ca_host_key.pub"
 
 # The name of the root user used in VM.
