--- a/ansible/roles/template/tasks/installing-packages.yml
+++ b/ansible/roles/template/tasks/installing-packages.yml
@@ -11,3 +11,9 @@
       - {name: "cloud-init"} # To enable cloud-init.
       - {name: "python-is-python3"}
       - {name: "pipx"} # A tool for installing and managing Python packages.
+      - {name: "python3-passlib"} # Required to use bcrypt.
+      - {name: "python3-jmespath"} # Required to use bcrypt.
+  notify: "Refresh ~/.bashrc"
+
+- name: Force all notified handlers to run at this point, not waiting for normal sync points
+  ansible.builtin.meta: "flush_handlers"
