fix: Add password_local: false so the user will be able to sign in the VM.

--- a/ansible/roles/template/tasks/users.yml
+++ b/ansible/roles/template/tasks/users.yml
@@ -8,6 +8,7 @@
     groups:
       - "sudo"
     state: "present"
+    password_lock: false
 
 - name: "Allowing the user to run any commands with sudo without the need to type its password"
   community.general.sudoers:
