feat: Update the task to copy both SSH server and client config file to the target host.

--- a/ansible/roles/template/tasks/ssh-config.yml
+++ b/ansible/roles/template/tasks/ssh-config.yml
@@ -1,7 +1,14 @@
 ---
-- name: "Copying default ssh config file to the target host"
+- name: "Copying SSH server configuration file"
   ansible.builtin.copy:
-    src: "ssh.conf"
-    dest: "/etc/ssh/sshd_config.d/"
-    mode: "preserve"
+    src: "ssh-server.conf"
+    dest: "/etc/ssh/sshd_config.d/ssh.conf"
+    mode: "0644"
+  notify: "Restarting the SSH server"
+
+- name: "Copying SSH client configuration file"
+  ansible.builtin.copy:
+    src: "ssh-client.conf"
+    dest: "/etc/ssh/ssh_config.d/ssh.conf"
+    mode: "0644"
   notify: "Restarting the SSH server"
