--- a/ansible/roles/template/tasks/removing-packages.yml
+++ b/ansible/roles/template/tasks/removing-packages.yml
@@ -6,10 +6,8 @@
     packages:
       - {name: "unattended-upgrades", state: "absent"}
 
-- name: "Removing dependencies that are no longer required"
-  ansible.builtin.apt:
+- name: "Removing dependencies that are no longer required and unnecessary packages from the cache"
+  ansible.builtin.import_tasks: "roles/common/tasks/debian/packages/apt.yml"
+  vars:
     autoremove: true
-
-- name: "Removing unnecessary packages from the cache"
-  ansible.builtin.apt:
     autoclean: true
